--- a/CE-UI/package.json
+++ b/CE-UI/package.json
@@ -13,13 +13,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
-    "@angular/common": "^15.0.0",
+    "@angular/cdk": "^15.2.9",
+    "@angular/common": "^15.2.9",
     "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
+    "@angular/core": "^15.2.9",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/router": "^15.2.9",
+    "@azure/msal-angular": "^2.5.8",
+    "@azure/msal-browser": "^2.37.1",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
@@ -41,6 +45,6 @@
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "typescript": "^4.8.2"
+    "typescript": "^4.9.5"
   }
 }
