--- a/CE-UI/package.json
+++ b/CE-UI/package.json
@@ -27,7 +27,9 @@
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "rxjs": "^7.8.0",
+    "tailwindcss": "^3.3.3",
     "tslib": "^2.3.0",
     "zone.js": "^0.13.0"
   },
