--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "postinstall": "node git-version.js",
     "start": "ng serve --configuration production",
     "dev": "ng serve --configuration development",
     "build": "ng build",
@@ -26,6 +27,7 @@
     "@azure/msal-browser": "^2.37.1",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@popperjs/core": "^2.11.6",
+    "@w11k/git-info": "^1.1.2",
     "bootstrap": "^5.2.3",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "rxjs": "^7.8.0",
@@ -41,6 +43,8 @@
     "@types/jasmine": "^4.3.0",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "eslint": "^8.42.0",
+    "fs-extra": "6.0.1",
+    "git-describe": "4.1.1",
     "jasmine-core": "^4.6.0",
     "karma": "^6.4.0",
     "karma-chrome-launcher": "^3.2.0",
