--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "postinstall": "node git-version.js",
     "start": "ng serve --configuration production",
     "dev": "ng serve --configuration development",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "npx eslint ."
