--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,6 +6,61 @@
 image: node:16
 
 pipelines:
+  branches:
+    develop:
+      - step:
+          name: Build, publish and deploy
+          script:
+                - apt-get update
+                - apt-get install zip -y
+                - npm install
+                - npm run build:dev
+                - cd dist/ce-ui
+                - zip -r ../publish.zip .
+                - pipe: atlassian/azure-web-apps-deploy:1.1.0
+                  variables:
+                    AZURE_APP_ID: $AZURE_APP_ID
+                    AZURE_PASSWORD: $AZURE_PASSWORD
+                    AZURE_TENANT_ID: $AZURE_TENANT_ID
+                    AZURE_RESOURCE_GROUP: 'cardioexplorer-dev'
+                    AZURE_APP_NAME: 'cardioexplorer-dev'
+                    ZIP_FILE: '../publish.zip'
+    staging:
+      - step:
+          name: Build, publish and deploy
+          script:
+                - apt-get update
+                - apt-get install zip -y
+                - npm install
+                - npm run build:staging
+                - cd dist/ce-ui
+                - zip -r ../publish.zip .
+                - pipe: atlassian/azure-web-apps-deploy:1.1.0
+                  variables:
+                    AZURE_APP_ID: $AZURE_APP_ID
+                    AZURE_PASSWORD: $AZURE_PASSWORD
+                    AZURE_TENANT_ID: $AZURE_TENANT_ID
+                    AZURE_RESOURCE_GROUP: 'cardioexplorer-staging'
+                    AZURE_APP_NAME: 'cardioexplorer-staging'
+                    ZIP_FILE: '../publish.zip'
+    main:
+      - step:
+          name: Build, publish and deploy
+          script:
+                - apt-get update
+                - apt-get install zip -y
+                - npm install
+                - npm run build
+                - cd dist/ce-ui
+                - zip -r ../publish.zip .
+                - pipe: atlassian/azure-web-apps-deploy:1.1.0
+                  variables:
+                    AZURE_APP_ID: $AZURE_APP_ID
+                    AZURE_PASSWORD: $AZURE_PASSWORD
+                    AZURE_TENANT_ID: $AZURE_TENANT_ID
+                    AZURE_RESOURCE_GROUP: 'cardioexplorer'
+                    AZURE_APP_NAME: 'cardioexplorer'
+                    ZIP_FILE: '../publish.zip'
   pull-requests:
     "**":
       - parallel:
