--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "ng": "ng",
     "postinstall": "node git-version.js",
     "start": "ng serve --configuration production",
-    "dev": "ng serve --configuration development",
+    "dev": "ng serve --configuration local",
     "build": "ng build --configuration production",
+    "build:dev": "ng build --configuration development",
+    "build:staging": "ng build --configuration staging",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "npx eslint ."
