--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@w11k/git-info": "^1.1.2",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "flowbite": "^1.8.1",
+    "ngx-toastr": "^17.0.2",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "^0.13.0"
@@ -85,6 +86,8 @@
     "*.{js,ts,json,css,scss,html,md}": [
       "npx prettier --write"
     ],
-    "*.{js,ts,html}": ["eslint --fix"]
+    "*.{js,ts,html}": [
+      "eslint --fix"
+    ]
   }
 }
